# sterling-native

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.caws/: policy.yaml  working-spec.yaml
.claude/: README.md  settings.json
.githooks/: commit-msg  pre-commit
benchmarks/: Cargo.toml  README.md
benchmarks/artifacts/: README.md  benchmark_report_20260206_122058.md  unified_benchmark_20260220_153525.json  unified_benchmark_20260220_153525_policy_validation.json
benchmarks/benches/: auditable_report.rs  macro_regimes.rs  micro.rs
benchmarks/src/: lib.rs
docs/: README.md
harness/: Cargo.toml
kernel/: Cargo.toml
schemas/: SolveRequestV1.schema.json  SolveResponseV1.schema.json  bytetrace_descriptor.v1.schema.json  claim.v1.schema.json  policy_snapshot.v1.schema.json  registry_snapshot.v1.schema.json  schema_descriptor.v1.schema.json  trace_bundle.v1.schema.json
scripts/: new_feature.sh
search/: Cargo.toml
tests/lock/: Cargo.toml
tests/lock/fixtures/b1a_rome_mini_search/: bundle_digest.txt  bundle_digest_basis.json  bundle_manifest.json  compilation_manifest.json  concept_registry.json  fixture.json  operator_registry.json  policy_snapshot.json  search_graph.json  search_tape.stap  verification_report.json
tests/lock/fixtures/b1b_compile_rome_mini_search/: expected_hashes.json  payload.json  schema_descriptor.json
tests/lock/fixtures/b1c_apply_rome_mini_search/: expected_hashes.json
tests/lock/src/: bundle_test_helpers.rs  lib.rs  m2_canonical_trace.rs
tests/lock/tests/: b1a_bundle_surface_parity.rs  b1b_compile_parity.rs  b1c_apply_parity.rs  b2_kv_linear_truth_regime.rs  b2_kv_search_truth_regime.rs  compilation_manifest_coherence.rs  compilation_replay.rs  concept_registry_coherence.rs  fixture_digest_binding.rs  hash_domain_lock.rs  partial_obs.rs  s1_m0_no_v1_deps.rs  s1_m1_crossproc.rs  s1_m1_determinism.rs  s1_m1_golden_fixtures.rs  s1_m2_crossproc.rs  s1_m2_determinism.rs  s1_m2_divergence.rs  s1_m3_crossproc.rs  s1_m3_determinism.rs  s1_m3_harness.rs  s1_m4_bundle_dir.rs  s1_m4_crossproc.rs  s1_m5_crossproc.rs  s1_m5_policy.rs  sc1_crossproc.rs  sc1_m2_hardening.rs  sc1_m3_1_slot_lattice.rs  sc1_m3_2_table_scorer.rs  sc1_m3_3_health_metrics.rs  sc1_m3_4_invariant_gaps.rs  sc1_m3_persistence.rs  sc1_m4_tape_bundle.rs  sc1_op_registry.rs  sc1_search_determinism.rs  sc1_tape_equiv.rs  tool_transcript.rs
tests/lock/tests/goldens/: sc1_m3_3_regime_duplicates_metrics.json
tools/: docs_index.py  generate_inventory.py  lint_acceptance_ids.py  (+2 more)
(+219 files in other folders)
