[workspace]
resolver = "2"
members = ["kernel", "search", "harness", "tests/lock", "benchmarks"]
default-members = ["kernel", "search", "harness", "tests/lock"]

[workspace.package]
edition = "2021"
version = "0.0.1"

[workspace.lints.clippy]
all = "deny"
pedantic = "warn"

# Evidence preservation via catch_unwind requires panic=unwind.
# Do NOT change to panic="abort" — this would silently disable
# audit trail preservation on world/scorer panics.
[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

# Benchmark profile: consistent across machines for meaningful regression detection.
# Note: panic setting is inherited from release profile (unwind).
[profile.bench]
codegen-units = 1
lto = "thin"
