[package]
name = "sterling-benchmarks"
edition.workspace = true
version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
sterling-kernel = { path = "../kernel" }
sterling-search = { path = "../search" }
sterling-harness = { path = "../harness" }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }

[[bench]]
name = "micro"
harness = false

[[bench]]
name = "macro_regimes"
harness = false

[[bench]]
name = "auditable_report"
harness = false
