[package]
name = "lock-tests"
edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
hex = "0.4"
serde_json = "1"
sterling-kernel = { path = "../../kernel" }
sterling-harness = { path = "../../harness" }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "compile_fixture"
path = "src/bin/compile_fixture.rs"

[[bin]]
name = "trace_fixture"
path = "src/bin/trace_fixture.rs"

[[bin]]
name = "harness_fixture"
path = "src/bin/harness_fixture.rs"

[[bin]]
name = "bundle_fixture"
path = "src/bin/bundle_fixture.rs"

[[bin]]
name = "policy_fixture"
path = "src/bin/policy_fixture.rs"
